// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flag renders correctly 1`] = `
.c0 {
  background-color: lightgrey;
  border-color: darkgrey;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  color: black;
  font-family: 'Fira Code','Operator','Hasklig','Monoid',monospace;
  font-size: 0.7em;
  padding-bottom: 0em;
  padding-left: 0.3em;
  padding-right: 0.3em;
  padding-top: 0.1em;
}

.c1 {
  display: none;
}

<span
  class="c0"
>
  <span
    aria-hidden="true"
    class="c1"
  >
    [
  </span>
  label
  <span
    aria-hidden="true"
    class="c1"
  >
    ]
  </span>
</span>
`;

exports[`Flag with href renders correctly 1`] = `
.c0 {
  background-color: lightgrey;
  border-color: darkgrey;
  border-radius: 2px;
  border-style: solid;
  border-width: 1px;
  color: black;
  font-family: 'Fira Code','Operator','Hasklig','Monoid',monospace;
  font-size: 0.7em;
  padding-bottom: 0em;
  padding-left: 0.3em;
  padding-right: 0.3em;
  padding-top: 0.1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  display: none;
}

<a
  class="c0"
  href="/"
  rel="nofollow noopener noreferrer external"
>
  <span
    aria-hidden="true"
    class="c1"
  >
    [
  </span>
  label
  <span
    aria-hidden="true"
    class="c1"
  >
    ]
  </span>
</a>
`;
